update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@AshkanArabim/dropdown",
+  "name": "@ashkanarabim/dropdown",
   "version": "1.0.0",
   "description": "A small module for handling navbar dropdown menus. It uses a class-based system. The style of these classes can be modified using an external CSS file.",
   "main": "ash-dropdown.js",
